// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Arbitrary children 1`] = `
.css-k5kxyg > *,
[data-css-k5kxyg] > * {
  width: 33.333%;
}

.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-2xuam4,
[data-css-2xuam4] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 1em;
}

.css-157so9w,
[data-css-157so9w] {
  font-size: 2.75em;
  font-weight: 600;
  margin: 0;
}

.css-ca2prh,
[data-css-ca2prh] {
  background-color: #f5f7fa;
  margin: 2em 0;
  padding: 3em;
}

.css-ca2prh:last-child,
[data-css-ca2prh]:last-child,
.css-ca2prh[data-simulate-lastchild],
[data-css-ca2prh][data-simulate-lastchild] {
  border-radius: 0 0 0.5625em 0.5625em;
  margin-bottom: -2em;
}

.css-157pxfb,
[data-css-157pxfb] {
  -webkit-box-pack: center;
  -moz-box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-justify-content: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -ms-flex-pack: center;
  border-color: #b5b8bd;
  border-radius: 0.5625em;
  border-style: solid;
  border-width: 1px;
  color: #555a61;
  cursor: pointer;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 700;
  height: 4em;
  justify-content: center;
  padding-left: 1em;
  padding-right: 1em;
  width: 100%;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  align-items: center;
  background-color: #f5f7fa;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
}

.css-157pxfb *,
[data-css-157pxfb] *,
.css-157pxfb *::before,
[data-css-157pxfb] *::before,
.css-157pxfb *::after,
[data-css-157pxfb] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-157pxfb:focus,
[data-css-157pxfb]:focus,
.css-157pxfb[data-simulate-focus],
[data-css-157pxfb][data-simulate-focus] {
  background-color: #f5f7fa;
  border-color: #0d68d0;
  box-shadow: 0 0 0 1px #0d68d0;
}

.css-157pxfb:focus:hover,
[data-css-157pxfb]:focus:hover,
.css-157pxfb[data-simulate-focus]:hover,
[data-css-157pxfb][data-simulate-focus]:hover,
.css-157pxfb:focus[data-simulate-hover],
[data-css-157pxfb]:focus[data-simulate-hover],
.css-157pxfb[data-simulate-focus][data-simulate-hover],
[data-css-157pxfb][data-simulate-focus][data-simulate-hover] {
  border-color: #0d68d0;
}

.css-157pxfb:focus:active,
[data-css-157pxfb]:focus:active,
.css-157pxfb[data-simulate-focus]:active,
[data-css-157pxfb][data-simulate-focus]:active,
.css-157pxfb:focus[data-simulate-active],
[data-css-157pxfb]:focus[data-simulate-active],
.css-157pxfb[data-simulate-focus][data-simulate-active],
[data-css-157pxfb][data-simulate-focus][data-simulate-active] {
  border-color: #0d68d0;
  box-shadow: 0 0 0 1px #0d68d0;
}

.css-157pxfb:hover,
[data-css-157pxfb]:hover,
.css-157pxfb[data-simulate-hover],
[data-css-157pxfb][data-simulate-hover] {
  background-color: #f0f2f5;
  border-color: #b5b8bd;
}

.css-157pxfb:active,
[data-css-157pxfb]:active,
.css-157pxfb[data-simulate-active],
[data-css-157pxfb][data-simulate-active] {
  background-color: #e1edfc;
  border-color: #368ef5;
  box-shadow: none;
}

.css-157pxfb::-moz-focus-inner,
[data-css-157pxfb]::-moz-focus-inner,
.css-157pxfb[data-simulate-mozfocusinner],
[data-css-157pxfb][data-simulate-mozfocusinner] {
  border: 0;
}

.css-y37dx1,
[data-css-y37dx1] {
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 1.75em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-k5kxyg"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle>
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <glamorous(div)>
                  <div
                    className="css-ca2prh"
                  >
                    <Button
                      fullWidth={true}
                      onClick={[Function]}
                    >
                      <glamorous(button)
                        fullWidth={true}
                        onClick={[Function]}
                        size="medium"
                        type="button"
                        variant="regular"
                      >
                        <button
                          className="css-157pxfb"
                          onClick={[Function]}
                          type="button"
                        >
                          <glamorous(span)
                            size="medium"
                          >
                            <span
                              className="css-y37dx1"
                            >
                              Button
                            </span>
                          </glamorous(span)>
                        </button>
                      </glamorous(button)>
                    </Button>
                  </div>
                </glamorous(div)>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Card Arbitrary children 2`] = `
.css-k5kxyg > *,
[data-css-k5kxyg] > * {
  width: 33.333%;
}

.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-2xuam4,
[data-css-2xuam4] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 1em;
}

.css-157so9w,
[data-css-157so9w] {
  font-size: 2.75em;
  font-weight: 600;
  margin: 0;
}

.css-1cgin0t,
[data-css-1cgin0t] {
  font-size: 2em;
  line-height: 1.5;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.css-157pxfb,
[data-css-157pxfb] {
  -webkit-box-pack: center;
  -moz-box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-justify-content: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -ms-flex-pack: center;
  border-color: #b5b8bd;
  border-radius: 0.5625em;
  border-style: solid;
  border-width: 1px;
  color: #555a61;
  cursor: pointer;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 700;
  height: 4em;
  justify-content: center;
  padding-left: 1em;
  padding-right: 1em;
  width: 100%;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  align-items: center;
  background-color: #f5f7fa;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
}

.css-157pxfb *,
[data-css-157pxfb] *,
.css-157pxfb *::before,
[data-css-157pxfb] *::before,
.css-157pxfb *::after,
[data-css-157pxfb] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-157pxfb:focus,
[data-css-157pxfb]:focus,
.css-157pxfb[data-simulate-focus],
[data-css-157pxfb][data-simulate-focus] {
  background-color: #f5f7fa;
  border-color: #0d68d0;
  box-shadow: 0 0 0 1px #0d68d0;
}

.css-157pxfb:focus:hover,
[data-css-157pxfb]:focus:hover,
.css-157pxfb[data-simulate-focus]:hover,
[data-css-157pxfb][data-simulate-focus]:hover,
.css-157pxfb:focus[data-simulate-hover],
[data-css-157pxfb]:focus[data-simulate-hover],
.css-157pxfb[data-simulate-focus][data-simulate-hover],
[data-css-157pxfb][data-simulate-focus][data-simulate-hover] {
  border-color: #0d68d0;
}

.css-157pxfb:focus:active,
[data-css-157pxfb]:focus:active,
.css-157pxfb[data-simulate-focus]:active,
[data-css-157pxfb][data-simulate-focus]:active,
.css-157pxfb:focus[data-simulate-active],
[data-css-157pxfb]:focus[data-simulate-active],
.css-157pxfb[data-simulate-focus][data-simulate-active],
[data-css-157pxfb][data-simulate-focus][data-simulate-active] {
  border-color: #0d68d0;
  box-shadow: 0 0 0 1px #0d68d0;
}

.css-157pxfb:hover,
[data-css-157pxfb]:hover,
.css-157pxfb[data-simulate-hover],
[data-css-157pxfb][data-simulate-hover] {
  background-color: #f0f2f5;
  border-color: #b5b8bd;
}

.css-157pxfb:active,
[data-css-157pxfb]:active,
.css-157pxfb[data-simulate-active],
[data-css-157pxfb][data-simulate-active] {
  background-color: #e1edfc;
  border-color: #368ef5;
  box-shadow: none;
}

.css-157pxfb::-moz-focus-inner,
[data-css-157pxfb]::-moz-focus-inner,
.css-157pxfb[data-simulate-mozfocusinner],
[data-css-157pxfb][data-simulate-mozfocusinner] {
  border: 0;
}

.css-y37dx1,
[data-css-y37dx1] {
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 1.75em;
}

.css-120tayx,
[data-css-120tayx] {
  background-color: #f5f7fa;
  padding: 2em 0;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-k5kxyg"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle>
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    <glamorous(div)>
                      <div
                        className="css-120tayx"
                      >
                        <Button
                          fullWidth={true}
                          onClick={[Function]}
                        >
                          <glamorous(button)
                            fullWidth={true}
                            onClick={[Function]}
                            size="medium"
                            type="button"
                            variant="regular"
                          >
                            <button
                              className="css-157pxfb"
                              onClick={[Function]}
                              type="button"
                            >
                              <glamorous(span)
                                size="medium"
                              >
                                <span
                                  className="css-y37dx1"
                                >
                                  Button
                                </span>
                              </glamorous(span)>
                            </button>
                          </glamorous(button)>
                        </Button>
                      </div>
                    </glamorous(div)>
                  </div>
                </CardBlock>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Card Basic card 1`] = `
.css-k5kxyg > *,
[data-css-k5kxyg] > * {
  width: 33.333%;
}

.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-2xuam4,
[data-css-2xuam4] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 1em;
}

.css-157so9w,
[data-css-157so9w] {
  font-size: 2.75em;
  font-weight: 600;
  margin: 0;
}

.css-1cgin0t,
[data-css-1cgin0t] {
  font-size: 2em;
  line-height: 1.5;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-k5kxyg"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle>
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Card Complex title and subtitle 1`] = `
.css-k5kxyg > *,
[data-css-k5kxyg] > * {
  width: 33.333%;
}

.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-2xuam4,
[data-css-2xuam4] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 1em;
}

.css-157so9w,
[data-css-157so9w] {
  font-size: 2.75em;
  font-weight: 600;
  margin: 0;
}

.css-1cgin0t,
[data-css-1cgin0t] {
  font-size: 2em;
  line-height: 1.5;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.css-nchnr4,
[data-css-nchnr4] {
  color: #555a61;
  font-size: 1.75em;
  font-weight: 600;
  margin: 0.5714285714285714em 0 0;
}

.css-18609av,
[data-css-18609av] {
  color: red;
  font-size: 0.5em;
}

.css-18609av:before,
[data-css-18609av]:before,
.css-18609av[data-simulate-before],
[data-css-18609av][data-simulate-before] {
  background-color: red;
  border-radius: 1em;
  content: "";
  display: inline-block;
  height: 1em;
  margin-right: 0.5em;
  position: relative;
  top: 0.1em;
  width: 1em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-k5kxyg"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle
                  subtitle={
                    <em>
                      Subtitle
                    </em>
                  }
                >
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                          <br />
                          <glamorous(span)>
                            <span
                              className="css-18609av"
                            >
                              Status label
                            </span>
                          </glamorous(span)>
                        </h3>
                      </glamorous(h3)>
                      <glamorous(h4)>
                        <h4
                          className="css-nchnr4"
                        >
                          <em>
                            Subtitle
                          </em>
                        </h4>
                      </glamorous(h4)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Card Order of sections 1`] = `
.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-2xuam4,
[data-css-2xuam4] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 1em;
}

.css-157so9w,
[data-css-157so9w] {
  font-size: 2.75em;
  font-weight: 600;
  margin: 0;
}

.css-1cgin0t,
[data-css-1cgin0t] {
  font-size: 2em;
  line-height: 1.5;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.css-y37dx1,
[data-css-y37dx1] {
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 1.75em;
}

.css-o4aed6,
[data-css-o4aed6] {
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  -webkit-box-align: start;
  align-items: flex-start;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

.css-o4aed6 > *:not(:first-child),
[data-css-o4aed6] > *:not(:first-child) {
  margin-left: 2em;
}

.css-9a8lzn,
[data-css-9a8lzn] {
  display: block;
  margin-bottom: 2em;
  margin-top: 2em;
  max-width: 100%;
}

.css-9a8lzn:first-child,
[data-css-9a8lzn]:first-child,
.css-9a8lzn[data-simulate-firstchild],
[data-css-9a8lzn][data-simulate-firstchild] {
  border-radius: 0.5625em 0.5625em 0 0;
  margin-top: 0;
}

.css-9a8lzn:last-child,
[data-css-9a8lzn]:last-child,
.css-9a8lzn[data-simulate-lastchild],
[data-css-9a8lzn][data-simulate-lastchild] {
  border-radius: 0 0 0.5625em 0.5625em;
  margin-bottom: -2em;
}

.css-wq8niw,
[data-css-wq8niw] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
}

.css-1sjhusa,
[data-css-1sjhusa] {
  font-size: 2.25em;
  font-weight: 700;
  margin: 0;
}

.css-16ua7to,
[data-css-16ua7to] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 2em;
  padding-right: 2em;
}

.css-16ua7to:last-child,
[data-css-16ua7to]:last-child,
.css-16ua7to[data-simulate-lastchild],
[data-css-16ua7to][data-simulate-lastchild] {
  margin-bottom: 0;
  margin-top: 3em;
}

.css-6mbfnd,
[data-css-6mbfnd] {
  -webkit-box-pack: center;
  -moz-box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-justify-content: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -ms-flex-pack: center;
  border-color: transparent;
  border-radius: 0.5625em;
  border-style: solid;
  border-width: 1px;
  color: #0d5db9;
  cursor: pointer;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 700;
  height: 4em;
  justify-content: center;
  padding-left: 1em;
  padding-right: 1em;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  align-items: center;
  background-color: transparent;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
}

.css-6mbfnd *,
[data-css-6mbfnd] *,
.css-6mbfnd *::before,
[data-css-6mbfnd] *::before,
.css-6mbfnd *::after,
[data-css-6mbfnd] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-6mbfnd:focus,
[data-css-6mbfnd]:focus,
.css-6mbfnd[data-simulate-focus],
[data-css-6mbfnd][data-simulate-focus] {
  border-color: #0d68d0;
  box-shadow: 0 0 0 1px #0d68d0;
}

.css-6mbfnd:focus:hover,
[data-css-6mbfnd]:focus:hover,
.css-6mbfnd[data-simulate-focus]:hover,
[data-css-6mbfnd][data-simulate-focus]:hover,
.css-6mbfnd:focus[data-simulate-hover],
[data-css-6mbfnd]:focus[data-simulate-hover],
.css-6mbfnd[data-simulate-focus][data-simulate-hover],
[data-css-6mbfnd][data-simulate-focus][data-simulate-hover] {
  border-color: #0d68d0;
}

.css-6mbfnd:focus:active,
[data-css-6mbfnd]:focus:active,
.css-6mbfnd[data-simulate-focus]:active,
[data-css-6mbfnd][data-simulate-focus]:active,
.css-6mbfnd:focus[data-simulate-active],
[data-css-6mbfnd]:focus[data-simulate-active],
.css-6mbfnd[data-simulate-focus][data-simulate-active],
[data-css-6mbfnd][data-simulate-focus][data-simulate-active] {
  border-color: #0d68d0;
  box-shadow: 0 0 0 1px #0d68d0;
}

.css-6mbfnd:hover,
[data-css-6mbfnd]:hover,
.css-6mbfnd[data-simulate-hover],
[data-css-6mbfnd][data-simulate-hover] {
  background-color: #f0f2f5;
  border-color: transparent;
}

.css-6mbfnd:active,
[data-css-6mbfnd]:active,
.css-6mbfnd[data-simulate-active],
[data-css-6mbfnd][data-simulate-active] {
  background-color: #e1edfc;
  border-color: transparent;
  box-shadow: none;
}

.css-6mbfnd::-moz-focus-inner,
[data-css-6mbfnd]::-moz-focus-inner,
.css-6mbfnd[data-simulate-mozfocusinner],
[data-css-6mbfnd][data-simulate-mozfocusinner] {
  border: 0;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-o4aed6"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardImage
                  alt="Bill Murray"
                  src="http://fillmurray.com/1000/563"
                >
                  <img
                    alt="Bill Murray"
                    className="css-9a8lzn"
                    src="http://fillmurray.com/1000/563"
                  />
                </CardImage>
                <CardTitle
                  minor={true}
                >
                  <CardTitle
                    minor={true}
                  >
                    <div
                      className="css-wq8niw"
                    >
                      <glamorous(h3)
                        minor={true}
                      >
                        <h3
                          className="css-1sjhusa"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
                <CardActions>
                  <div
                    className="css-16ua7to"
                  >
                    <Button
                      minimal={true}
                    >
                      <glamorous(button)
                        minimal={true}
                        size="medium"
                        type="button"
                        variant="regular"
                      >
                        <button
                          className="css-6mbfnd"
                          type="button"
                        >
                          <glamorous(span)
                            size="medium"
                          >
                            <span
                              className="css-y37dx1"
                            >
                              Button Text
                            </span>
                          </glamorous(span)>
                        </button>
                      </glamorous(button)>
                    </Button>
                  </div>
                </CardActions>
              </div>
            </Card>
          </Card>
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle>
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardImage
                  alt="Bill Murray"
                  src="http://fillmurray.com/1001/563"
                >
                  <img
                    alt="Bill Murray"
                    className="css-9a8lzn"
                    src="http://fillmurray.com/1001/563"
                  />
                </CardImage>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
                <CardActions>
                  <div
                    className="css-16ua7to"
                  >
                    <Button
                      minimal={true}
                    >
                      <glamorous(button)
                        minimal={true}
                        size="medium"
                        type="button"
                        variant="regular"
                      >
                        <button
                          className="css-6mbfnd"
                          type="button"
                        >
                          <glamorous(span)
                            size="medium"
                          >
                            <span
                              className="css-y37dx1"
                            >
                              Button Text
                            </span>
                          </glamorous(span)>
                        </button>
                      </glamorous(button)>
                    </Button>
                  </div>
                </CardActions>
              </div>
            </Card>
          </Card>
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle>
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardActions>
                  <div
                    className="css-16ua7to"
                  >
                    <Button
                      minimal={true}
                    >
                      <glamorous(button)
                        minimal={true}
                        size="medium"
                        type="button"
                        variant="regular"
                      >
                        <button
                          className="css-6mbfnd"
                          type="button"
                        >
                          <glamorous(span)
                            size="medium"
                          >
                            <span
                              className="css-y37dx1"
                            >
                              Button Text
                            </span>
                          </glamorous(span)>
                        </button>
                      </glamorous(button)>
                    </Button>
                  </div>
                </CardActions>
                <CardImage
                  alt="Bill Murray"
                  src="http://fillmurray.com/1002/563"
                >
                  <img
                    alt="Bill Murray"
                    className="css-9a8lzn"
                    src="http://fillmurray.com/1002/563"
                  />
                </CardImage>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
              </div>
            </Card>
          </Card>
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle>
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardActions>
                  <div
                    className="css-16ua7to"
                  >
                    <Button
                      minimal={true}
                    >
                      <glamorous(button)
                        minimal={true}
                        size="medium"
                        type="button"
                        variant="regular"
                      >
                        <button
                          className="css-6mbfnd"
                          type="button"
                        >
                          <glamorous(span)
                            size="medium"
                          >
                            <span
                              className="css-y37dx1"
                            >
                              Button Text
                            </span>
                          </glamorous(span)>
                        </button>
                      </glamorous(button)>
                    </Button>
                  </div>
                </CardActions>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
                <CardImage
                  alt="Bill Murray"
                  src="http://fillmurray.com/1003/563"
                >
                  <img
                    alt="Bill Murray"
                    className="css-9a8lzn"
                    src="http://fillmurray.com/1003/563"
                  />
                </CardImage>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Card Something 1`] = `
.css-k5kxyg > *,
[data-css-k5kxyg] > * {
  width: 33.333%;
}

.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-2xuam4,
[data-css-2xuam4] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 1em;
}

.css-157so9w,
[data-css-157so9w] {
  font-size: 2.75em;
  font-weight: 600;
  margin: 0;
}

.css-10lwljt,
[data-css-10lwljt] {
  font-size: 2em;
  line-height: 1.5;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  position: relative;
}

.css-10lwljt::before,
[data-css-10lwljt]::before,
.css-10lwljt[data-simulate-before],
[data-css-10lwljt][data-simulate-before] {
  border-color: #e1edfc;
  border-style: solid;
  border-width: 1em 1.5em;
  bottom: -1em;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: -1em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-k5kxyg"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle>
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <glamorous(CardBlock)>
                  <div
                    className="css-10lwljt"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </glamorous(CardBlock)>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Card With a subtitle 1`] = `
.css-k5kxyg > *,
[data-css-k5kxyg] > * {
  width: 33.333%;
}

.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-2xuam4,
[data-css-2xuam4] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 1em;
}

.css-157so9w,
[data-css-157so9w] {
  font-size: 2.75em;
  font-weight: 600;
  margin: 0;
}

.css-1cgin0t,
[data-css-1cgin0t] {
  font-size: 2em;
  line-height: 1.5;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.css-nchnr4,
[data-css-nchnr4] {
  color: #555a61;
  font-size: 1.75em;
  font-weight: 600;
  margin: 0.5714285714285714em 0 0;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-k5kxyg"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle
                  subtitle="Card subtitle"
                >
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                      <glamorous(h4)>
                        <h4
                          className="css-nchnr4"
                        >
                          Card subtitle
                        </h4>
                      </glamorous(h4)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Card With actions 1`] = `
.css-k5kxyg > *,
[data-css-k5kxyg] > * {
  width: 33.333%;
}

.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-2xuam4,
[data-css-2xuam4] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
  padding-top: 1em;
}

.css-157so9w,
[data-css-157so9w] {
  font-size: 2.75em;
  font-weight: 600;
  margin: 0;
}

.css-1cgin0t,
[data-css-1cgin0t] {
  font-size: 2em;
  line-height: 1.5;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.css-y37dx1,
[data-css-y37dx1] {
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 1.75em;
}

.css-16ua7to,
[data-css-16ua7to] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 2em;
  padding-right: 2em;
}

.css-16ua7to:last-child,
[data-css-16ua7to]:last-child,
.css-16ua7to[data-simulate-lastchild],
[data-css-16ua7to][data-simulate-lastchild] {
  margin-bottom: 0;
  margin-top: 3em;
}

.css-6mbfnd,
[data-css-6mbfnd] {
  -webkit-box-pack: center;
  -moz-box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-justify-content: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -ms-flex-pack: center;
  border-color: transparent;
  border-radius: 0.5625em;
  border-style: solid;
  border-width: 1px;
  color: #0d5db9;
  cursor: pointer;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 700;
  height: 4em;
  justify-content: center;
  padding-left: 1em;
  padding-right: 1em;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  align-items: center;
  background-color: transparent;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
}

.css-6mbfnd *,
[data-css-6mbfnd] *,
.css-6mbfnd *::before,
[data-css-6mbfnd] *::before,
.css-6mbfnd *::after,
[data-css-6mbfnd] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-6mbfnd:focus,
[data-css-6mbfnd]:focus,
.css-6mbfnd[data-simulate-focus],
[data-css-6mbfnd][data-simulate-focus] {
  border-color: #0d68d0;
  box-shadow: 0 0 0 1px #0d68d0;
}

.css-6mbfnd:focus:hover,
[data-css-6mbfnd]:focus:hover,
.css-6mbfnd[data-simulate-focus]:hover,
[data-css-6mbfnd][data-simulate-focus]:hover,
.css-6mbfnd:focus[data-simulate-hover],
[data-css-6mbfnd]:focus[data-simulate-hover],
.css-6mbfnd[data-simulate-focus][data-simulate-hover],
[data-css-6mbfnd][data-simulate-focus][data-simulate-hover] {
  border-color: #0d68d0;
}

.css-6mbfnd:focus:active,
[data-css-6mbfnd]:focus:active,
.css-6mbfnd[data-simulate-focus]:active,
[data-css-6mbfnd][data-simulate-focus]:active,
.css-6mbfnd:focus[data-simulate-active],
[data-css-6mbfnd]:focus[data-simulate-active],
.css-6mbfnd[data-simulate-focus][data-simulate-active],
[data-css-6mbfnd][data-simulate-focus][data-simulate-active] {
  border-color: #0d68d0;
  box-shadow: 0 0 0 1px #0d68d0;
}

.css-6mbfnd:hover,
[data-css-6mbfnd]:hover,
.css-6mbfnd[data-simulate-hover],
[data-css-6mbfnd][data-simulate-hover] {
  background-color: #f0f2f5;
  border-color: transparent;
}

.css-6mbfnd:active,
[data-css-6mbfnd]:active,
.css-6mbfnd[data-simulate-active],
[data-css-6mbfnd][data-simulate-active] {
  background-color: #e1edfc;
  border-color: transparent;
  box-shadow: none;
}

.css-6mbfnd::-moz-focus-inner,
[data-css-6mbfnd]::-moz-focus-inner,
.css-6mbfnd[data-simulate-mozfocusinner],
[data-css-6mbfnd][data-simulate-mozfocusinner] {
  border: 0;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-k5kxyg"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardTitle>
                  <CardTitle>
                    <div
                      className="css-2xuam4"
                    >
                      <glamorous(h3)>
                        <h3
                          className="css-157so9w"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
                <CardActions>
                  <div
                    className="css-16ua7to"
                  >
                    <Button
                      minimal={true}
                    >
                      <glamorous(button)
                        minimal={true}
                        size="medium"
                        type="button"
                        variant="regular"
                      >
                        <button
                          className="css-6mbfnd"
                          type="button"
                        >
                          <glamorous(span)
                            size="medium"
                          >
                            <span
                              className="css-y37dx1"
                            >
                              Button Text
                            </span>
                          </glamorous(span)>
                        </button>
                      </glamorous(button)>
                    </Button>
                    <Button
                      minimal={true}
                    >
                      <glamorous(button)
                        minimal={true}
                        size="medium"
                        type="button"
                        variant="regular"
                      >
                        <button
                          className="css-6mbfnd"
                          type="button"
                        >
                          <glamorous(span)
                            size="medium"
                          >
                            <span
                              className="css-y37dx1"
                            >
                              Button Text
                            </span>
                          </glamorous(span)>
                        </button>
                      </glamorous(button)>
                    </Button>
                  </div>
                </CardActions>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Card With an image 1`] = `
.css-k5kxyg > *,
[data-css-k5kxyg] > * {
  width: 33.333%;
}

.css-if08rw,
[data-css-if08rw] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  font-size: 8px;
  line-height: 1.25;
  outline: 0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  border-radius: 0.5625em;
  box-shadow: rgba(0,0,0,0.5) 0 1px 2px;
  padding-bottom: 2em;
  padding-top: 0.01em;
  background-color: #fff;
}

.css-if08rw *,
[data-css-if08rw] *,
.css-if08rw *::before,
[data-css-if08rw] *::before,
.css-if08rw *::after,
[data-css-if08rw] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-1cgin0t,
[data-css-1cgin0t] {
  font-size: 2em;
  line-height: 1.5;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.css-9a8lzn,
[data-css-9a8lzn] {
  display: block;
  margin-bottom: 2em;
  margin-top: 2em;
  max-width: 100%;
}

.css-9a8lzn:first-child,
[data-css-9a8lzn]:first-child,
.css-9a8lzn[data-simulate-firstchild],
[data-css-9a8lzn][data-simulate-firstchild] {
  border-radius: 0.5625em 0.5625em 0 0;
  margin-top: 0;
}

.css-9a8lzn:last-child,
[data-css-9a8lzn]:last-child,
.css-9a8lzn[data-simulate-lastchild],
[data-css-9a8lzn][data-simulate-lastchild] {
  border-radius: 0 0 0.5625em 0.5625em;
  margin-bottom: -2em;
}

.css-wq8niw,
[data-css-wq8niw] {
  margin-bottom: 2em;
  margin-top: 2em;
  padding-left: 3em;
  padding-right: 3em;
}

.css-1sjhusa,
[data-css-1sjhusa] {
  font-size: 2.25em;
  font-weight: 700;
  margin: 0;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#d5362b",
        "backgroundColor_danger_active": "#e5746a",
        "backgroundColor_danger_focus": "#d5362b",
        "backgroundColor_danger_hover": "#e04e43",
        "backgroundColor_disabled": "#e6e9ee",
        "backgroundColor_input_danger": "#fae8e6",
        "backgroundColor_input_success": "#e2f5e8",
        "backgroundColor_input_warning": "#fff0d7",
        "backgroundColor_link_focus": "#e6e9ee",
        "backgroundColor_success": "#12ba50",
        "backgroundColor_success_active": "#4fdc80",
        "backgroundColor_success_focus": "#12ba50",
        "backgroundColor_success_hover": "#23c75d",
        "backgroundColor_warning": "#cf8a00",
        "backgroundColor_warning_active": "#eea20b",
        "backgroundColor_warning_focus": "#cf8a00",
        "backgroundColor_warning_hover": "#eea20b",
        "borderColor": "#b5b8bd",
        "borderColor_active": "#368ef5",
        "borderColor_danger": "#b72318",
        "borderColor_danger_active": "#991209",
        "borderColor_danger_focus": "#991209",
        "borderColor_danger_hover": "#d5362b",
        "borderColor_focus": "#0d68d0",
        "borderColor_hover": "#167df4",
        "borderColor_success": "#09a33f",
        "borderColor_success_active": "#016626",
        "borderColor_success_focus": "#016626",
        "borderColor_success_hover": "#23c75d",
        "borderColor_warning": "#ba7c00",
        "borderColor_warning_active": "#7f5500",
        "borderColor_warning_focus": "#7f5500",
        "borderColor_warning_hover": "#cf8a00",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2.25em",
        "color_black": "#000",
        "color_caption": "#555a61",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#171a1e",
        "color_gray_20": "#f0f2f5",
        "color_gray_30": "#e6e9ee",
        "color_gray_40": "#d8dade",
        "color_gray_50": "#b5b8bd",
        "color_gray_60": "#909499",
        "color_gray_70": "#676c73",
        "color_gray_80": "#555a61",
        "color_gray_90": "#33383f",
        "color_heading": "#0d68d0",
        "color_helpText_danger": "#b72318",
        "color_helpText_success": "#09a33f",
        "color_helpText_warning": "#976400",
        "color_link": "#0d5db9",
        "color_link_active": "#0d53a3",
        "color_link_focus": "#0d53a3",
        "color_link_hover": "#0d72e6",
        "color_placeholder": "#909499",
        "color_text": "#171a1e",
        "color_text_danger": "#a81a10",
        "color_text_disabled": "#b5b8bd",
        "color_text_ondanger": "white",
        "color_text_onprimary": "white",
        "color_text_onsuccess": "white",
        "color_text_onwarning": "white",
        "color_text_primary": "#0d5db9",
        "color_text_success": "#058534",
        "color_text_warning": "#976400",
        "color_theme_10": "#e1edfc",
        "color_theme_100": "#0d53a3",
        "color_theme_20": "#b8d5f9",
        "color_theme_30": "#8ebdf7",
        "color_theme_40": "#62a6f5",
        "color_theme_50": "#368ef5",
        "color_theme_60": "#167df4",
        "color_theme_70": "#0d72e6",
        "color_theme_80": "#0d68d0",
        "color_theme_90": "#0d5db9",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "8px",
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Example>
      <glamorous(div)>
        <div
          className="css-k5kxyg"
        >
          <Card>
            <Card>
              <div
                className="css-if08rw"
              >
                <CardImage
                  alt="Bill Murray"
                  src="http://fillmurray.com/1000/563"
                >
                  <img
                    alt="Bill Murray"
                    className="css-9a8lzn"
                    src="http://fillmurray.com/1000/563"
                  />
                </CardImage>
                <CardTitle
                  minor={true}
                >
                  <CardTitle
                    minor={true}
                  >
                    <div
                      className="css-wq8niw"
                    >
                      <glamorous(h3)
                        minor={true}
                      >
                        <h3
                          className="css-1sjhusa"
                        >
                          Card title
                        </h3>
                      </glamorous(h3)>
                    </div>
                  </CardTitle>
                </CardTitle>
                <CardBlock>
                  <div
                    className="css-1cgin0t"
                  >
                    Light years star stuff harvesting star light citizens of distant epochs encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
                  </div>
                </CardBlock>
              </div>
            </Card>
          </Card>
        </div>
      </glamorous(div)>
    </Example>
  </ThemeProvider>
</ThemeProvider>
`;
